--- a/package.json
+++ b/package.json
@@ -9,12 +9,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "nodejs": "0.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "twemoji-react": "^1.0.4"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^1.0.7",
-    "vite": "^2.8.0"
+    "vite": "^2.8.6"
   }
 }
